B&L QA/objects/Grouping_Management__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Contains grouped values, for easy maintenance of lists used in code. For example, contains the list of sales org user roles whose Cases should be forwarded to each CoE.</description>
    <fields>
        <fullName>Context__c</fullName>
        <description>The context in which this group is used.</description>
        <label>Context</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extended_Values_2__c</fullName>
        <description>A further 255 character extension</description>
        <label>Extended Values 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extended_Values_3__c</fullName>
        <description>A further 255 character extensionEx</description>
        <label>Extended Values 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extended_Values__c</fullName>
        <description>Extension to Values field, where values exceed 255 characters in length.</description>
        <label>Extended Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Values__c</fullName>
        <description>The values associated with the group.</description>
        <label>Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Grouping Management</label>
</CustomObject>